k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend:0.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          # Переопределяем команду, чтобы НЕ запускать alembic здесь:
          command: ["sh","-c"]
          args:
            - |
              gunicorn app.main:app --workers ${GUNICORN_WORKERS} --worker-class uvicorn.workers.UvicornWorker --bind=${GUNICORN_BIND}
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
