k8s/pg-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: app
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: pg
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pvc-postgres
