k8s/pg-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: app
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
  namespace: app
spec:
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
